--- a/schedule/css/main.css
+++ b/schedule/css/main.css
@@ -532,6 +532,66 @@ input {
   font-size: 1.4em;
   font-weight: 500; }
 
+.board__table {
+  border-spacing: 0;
+  border-collapse: collapse; }
+
+.board__aside {
+  background-color: #ffffff;
+  border-left: 1px solid #D0D3DA;
+  border-bottom: 1px solid #D0D3DA; }
+
+.board__worker {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 8px; }
+
+.board__worker-img {
+  width: 40px;
+  height: 40px;
+  min-width: 40px;
+  min-height: 40px;
+  border-radius: 50%;
+  background-color: #D0D3DA;
+  margin-right: 8px; }
+
+.board__worker-nickname {
+  margin-bottom: 2px;
+  font-size: 1.6em;
+  font-weight: 500; }
+
+.board__worker-name-surname {
+  margin-bottom: 2px;
+  font-size: 1.2em;
+  font-weight: 500; }
+
+.board__worker-post {
+  font-size: 1.2em;
+  font-weight: 500;
+  color: #8391AD; }
+
+.board__main {
+  width: 100%;
+  height: 1px;
+  padding: 0px;
+  border-bottom: 1px solid #D0D3DA; }
+
+.board__timegrid {
+  width: 100%;
+  height: 100%;
+  border-spacing: 0;
+  border-collapse: collapse; }
+
+.timegrid__cell {
+  border-left: 1px solid #D0D3DA;
+  background-color: #ffffff; }
+
 .visible {
   opacity: 1;
   pointer-events: auto; }
