--- a/schedule/css/main.css
+++ b/schedule/css/main.css
@@ -620,10 +620,10 @@ input {
   background-color: #ffffff; }
 
 .timegrid__cell_end {
-  border-left: 3px solid #D0D3DA; }
+  border-left: 3px solid #9B9FA7; }
 
 .timeline__item_end {
-  border-left: 3px solid #D0D3DA; }
+  border-left: 3px solid #9B9FA7; }
 
 .visible {
   opacity: 1;
