--- a/schedule/css/main.css
+++ b/schedule/css/main.css
@@ -302,6 +302,29 @@ input {
   border: 1px solid #D0D3DA;
   cursor: pointer; }
 
+.controls__days-amount {
+  position: relative;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-right: 15px;
+  font-size: 1.4em;
+  cursor: pointer; }
+
+.controls__days-amount-text {
+  margin-right: 8px; }
+
+.controls__days-amount-list {
+  top: 35px;
+  right: 0px;
+  width: auto;
+  white-space: nowrap; }
+
 .controls__date-period {
   position: relative;
   display: -webkit-box;
@@ -334,7 +357,7 @@ input {
   -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-right: 25px; }
+  margin-right: 15px; }
 
 .controls__date-picker-item {
   display: -webkit-box;
@@ -437,6 +460,17 @@ input {
   color: #ffffff; }
   .calendar-table__cell-day_selected-one:hover {
     border-radius: 50%; }
+
+.controls__date-select-prev, .controls__date-select-next {
+  width: 2em;
+  cursor: pointer; }
+  .controls__date-select-prev svg, .controls__date-select-next svg {
+    stroke: #000000; }
+
+.controls__date-select-prev {
+  -webkit-transform: rotate(180deg);
+      -ms-transform: rotate(180deg);
+          transform: rotate(180deg); }
 
 .controls-mobile__item {
   display: none;
@@ -618,6 +652,8 @@ input {
 .timegrid__cell {
   border-left: 1px solid #D0D3DA;
   background-color: #ffffff; }
+  .timegrid__cell:last-child {
+    border-right: 1px solid #D0D3DA; }
 
 .timegrid__cell_end {
   border-left: 3px solid #9B9FA7; }
