--- a/schedule/css/main.css
+++ b/schedule/css/main.css
@@ -674,7 +674,9 @@ input {
   .board__worker-img img {
     width: 100%;
     height: 100%;
-    border-radius: 50%; }
+    border-radius: 50%;
+    -o-object-fit: cover;
+       object-fit: cover; }
 
 .board__worker-nickname {
   margin-bottom: 2px;
@@ -765,13 +767,25 @@ input {
   -webkit-justify-content: center;
       -ms-flex-pack: center;
           justify-content: center;
-  padding: 5px 8px;
+  padding: 5px 8px 5px 10px;
   border-radius: 6px; }
+  .appointment::after {
+    content: "";
+    display: block;
+    position: absolute;
+    left: 5px;
+    width: 2px;
+    border-radius: 10px;
+    height: 70%;
+    background-color: #ffffff;
+    opacity: 0.4; }
 
 .appointment__job-number {
   margin-bottom: 2px;
   font-size: 1.4em;
-  color: #ffffff; }
+  color: #ffffff;
+  white-space: nowrap;
+  overflow: hidden; }
 
 .appointment__zip {
   font-size: 1em;
@@ -800,6 +814,12 @@ input {
 
 .appointment_recall {
   background-color: #FF0000; }
+
+.appointment_notification {
+  padding-left: 15px; }
+  .appointment_notification::after {
+    width: 4px;
+    opacity: 1; }
 
 .visible {
   opacity: 1;
