--- a/schedule/css/main.css
+++ b/schedule/css/main.css
@@ -304,6 +304,37 @@ input {
   .controls__search-btn svg, .controls__board-hour-select-btn svg {
     fill: #8391AD; }
 
+.controls__board-hour-select-main {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center; }
+
+.controls__board-hour-select-field {
+  border: 1px solid #D0D3DA;
+  border-radius: 6px;
+  padding: 2.5px 5px;
+  cursor: pointer; }
+
+.controls__board-hour-select-wrapper {
+  position: relative; }
+
+.controls__board-hour-select-select {
+  position: absolute;
+  top: 10px;
+  background-color: #ffffff;
+  width: 100%;
+  cursor: pointer; }
+
+.controls__board-hour-select-text {
+  height: 14px;
+  width: 50px;
+  text-transform: uppercase; }
+
 .controls__board-hour-select {
   position: relative;
   text-align: center; }
@@ -320,11 +351,24 @@ input {
   right: 0; }
 
 .controls__board-hour-select-select {
+  top: 25px;
+  padding: 0px;
+  max-height: 178px;
+  overflow-y: auto;
+  border-radius: 3px;
   background-color: #ffffff; }
 
 .controls__board-hour-option {
+  padding: 5px 4px;
   background-color: #ffffff;
-  border-top: 1px solid #D0D3DA; }
+  border-top: 1px solid #D0D3DA;
+  font-size: 1em;
+  text-transform: uppercase; }
+  .controls__board-hour-option:first-child {
+    border-top: none; }
+
+.controls__board-hour-option_selected {
+  background-color: #F6F7FB; }
 
 .controls__board-hour-select-main {
   font-size: 1.4em;
@@ -556,7 +600,6 @@ input {
   padding: 5px 0;
   text-align: center;
   background-color: #ffffff;
-  border-left: 3px solid #D0D3DA;
   border-top: 1px solid #D0D3DA;
   border-bottom: 1px solid #D0D3DA; }
   .boards__dates-item:last-child {
@@ -737,9 +780,19 @@ input {
   border-left: 3px solid #9B9FA7; }
 
 .timeline__item_end {
-  border-left: 3px solid #9B9FA7; }
+  border-left: 3px solid #9B9FA7;
+  position: relative; }
+  .timeline__item_end::before {
+    content: "";
+    display: block;
+    position: absolute;
+    left: -3px;
+    top: -23px;
+    background-color: #9B9FA7;
+    width: 3px;
+    height: 22px; }
 
-.appointments {
+.schedule-items {
   position: absolute;
   top: 0;
   left: 0;
@@ -794,7 +847,7 @@ input {
 .appointment_hide {
   display: none; }
 
-.appointments__day-wrapper {
+.schedule-items__day-wrapper {
   position: relative;
   overflow: hidden;
   display: -webkit-box;
@@ -820,6 +873,13 @@ input {
   .appointment_notification::after {
     width: 4px;
     opacity: 1; }
+
+.absence {
+  position: absolute;
+  height: 70%;
+  background-color: #FFB700;
+  padding: 5px 8px 5px 10px;
+  border-radius: 6px; }
 
 .visible {
   opacity: 1;
