--- a/schedule/css/main.css
+++ b/schedule/css/main.css
@@ -760,6 +760,9 @@ input {
   display: flex;
   height: 70px; }
 
+.timegrid__row_increased {
+  height: 140px; }
+
 .timegrid__realtime-line {
   display: none;
   position: absolute;
@@ -809,6 +812,7 @@ input {
 .appointment {
   position: absolute;
   height: 70%;
+  max-height: 60px;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
