--- a/schedule/css/main.css
+++ b/schedule/css/main.css
@@ -811,7 +811,7 @@ input {
 
 .appointment {
   position: absolute;
-  top: 8px;
+  top: 15%;
   height: 70%;
   max-height: 60px;
   display: -webkit-box;
@@ -881,11 +881,96 @@ input {
     width: 4px;
     opacity: 1; }
 
+.appointment__hover-block {
+  display: none;
+  position: absolute;
+  width: auto;
+  height: 100%;
+  z-index: 5;
+  background-color: inherit; }
+
 .absence {
   position: absolute;
-  height: 70%;
+  height: 80%;
   background-color: #FFB700;
   padding: 5px 8px 5px 10px;
+  border-radius: 6px; }
+
+.popup-window {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  z-index: 5;
+  opacity: 0;
+  pointer-events: none; }
+
+.popup-window__overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #6093DE;
+  opacity: .25;
+  z-index: -1; }
+
+.drag-and-drop-confirmation-popup {
+  background-color: #ffffff;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+  padding: 25px;
+  margin: 0 10px;
+  width: 50%;
+  min-width: 320px;
+  max-width: 820px;
+  border-radius: 6px; }
+
+.drag-and-drop-confirmation-popup__confirm-btn, .drag-and-drop-confirmation-popup__deny-btn {
+  border-radius: 6px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-flex-basis: 40%;
+      -ms-flex-preferred-size: 40%;
+          flex-basis: 40%;
+  padding: 8px 25px;
+  border: 2px solid #6093DE;
   border-radius: 6px; }
 
 .visible {
