--- a/schedule/css/main.css
+++ b/schedule/css/main.css
@@ -758,7 +758,7 @@ input {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  height: 70px; }
+  height: 100%; }
 
 .timegrid__row_increased {
   height: 140px; }
@@ -866,6 +866,19 @@ input {
       -ms-flex-align: center;
           align-items: center; }
 
+.appointment__job {
+  display: inline;
+  color: #ffffff;
+  white-space: nowrap; }
+
+.appointment__job-number {
+  padding-right: 2px;
+  display: inline; }
+
+.appointment__job-info {
+  display: inline;
+  font-size: 1.2em; }
+
 .appointment_follow {
   background-color: #6093DE; }
 
@@ -895,6 +908,10 @@ input {
   background-color: #FFB700;
   padding: 5px 8px 5px 10px;
   border-radius: 6px; }
+  .absence svg {
+    position: absolute;
+    top: 15px;
+    left: 10px; }
 
 .popup-window {
   width: 100vw;
@@ -928,12 +945,61 @@ input {
   opacity: .25;
   z-index: -1; }
 
+.drag-and-drop-confirmation__header {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
+  margin-bottom: 20px; }
+
+.drag-and-drop-confirmation__job-number {
+  font-size: 2em;
+  -webkit-align-self: center;
+      -ms-flex-item-align: center;
+          align-self: center;
+  margin-bottom: 15px; }
+
+.drag-and-drop-confirmation__appointment-info-text {
+  font-size: 1.6em;
+  margin-bottom: 5px; }
+
+.drag-and-drop-confirmation__appointment-info-item {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 5px;
+  font-size: 1.6em;
+  white-space: nowrap;
+  overflow: hidden; }
+  .drag-and-drop-confirmation__appointment-info-item span {
+    padding-right: 8px;
+    color: #8391AD; }
+
+.drag-and-drop-confirmation__date-old, .drag-and-drop-confirmation__date-new {
+  padding-right: 5px; }
+
 .drag-and-drop-confirmation-popup {
   background-color: #ffffff;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-align: center;
   -webkit-align-items: center;
       -ms-flex-align: center;
@@ -947,10 +1013,21 @@ input {
           flex-wrap: wrap;
   padding: 25px;
   margin: 0 10px;
-  width: 50%;
   min-width: 320px;
-  max-width: 820px;
+  max-width: 420px;
   border-radius: 6px; }
+
+.drag-and-drop-confirmation__questions-wrapper {
+  margin-bottom: 20px;
+  -webkit-align-self: flex-start;
+      -ms-flex-item-align: start;
+          align-self: flex-start; }
+
+.drag-and-drop-confirmation__btns {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex; }
 
 .drag-and-drop-confirmation-popup__confirm-btn, .drag-and-drop-confirmation-popup__deny-btn {
   border-radius: 6px;
@@ -970,8 +1047,80 @@ input {
       -ms-flex-preferred-size: 40%;
           flex-basis: 40%;
   padding: 8px 25px;
-  border: 2px solid #6093DE;
+  font-size: 1.2em;
   border-radius: 6px; }
+
+.drag-and-drop-confirmation-popup__deny-btn {
+  margin-right: 20px; }
+
+.drag-and-drop-confirmation-popup__confirm-btn {
+  border: 2px solid #01B41F;
+  color: #01B41F; }
+
+.drag-and-drop-confirmation-popup__deny-btn {
+  border: 2px solid #FF0000;
+  color: #FF0000; }
+
+.drag-and-drop-confirmation__questions {
+  margin-bottom: 15px; }
+
+.drag-and-drop-confirmation__questions-item {
+  margin-bottom: 5px; }
+
+.questions-item {
+  display: block;
+  position: relative;
+  padding-left: 30px;
+  cursor: pointer;
+  font-size: 1.2em;
+  font-weight: 400;
+  line-height: 1.5;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none; }
+
+.questions-item__checkbox {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0; }
+
+.questions-item__checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 20px;
+  width: 20px;
+  border-radius: 6px;
+  border: 1px solid #D0D3DA;
+  background-color: #ffffff; }
+
+.questions-item:hover .questions-item__checkbox ~ .questions-item__checkmark {
+  border: 1px solid #6093DE; }
+
+.questions-item .questions-item__checkbox:checked ~ .questions-item__checkmark {
+  border: 1px solid #6093DE; }
+
+.questions-item__checkmark::after {
+  content: "";
+  position: absolute;
+  display: none; }
+
+.questions-item__checkbox:checked ~ .questions-item__checkmark::after {
+  display: block; }
+
+.questions-item__checkmark::after {
+  left: 6px;
+  top: 2px;
+  width: 5px;
+  height: 10px;
+  border: solid #6093DE;
+  border-width: 0 1.5px 1.5px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg); }
 
 .visible {
   opacity: 1;
