--- a/schedule/css/main.css
+++ b/schedule/css/main.css
@@ -809,6 +809,9 @@ input {
   width: 100%;
   overflow: hidden; }
 
+.appointment_hide {
+  display: none !important; }
+
 .appointment {
   position: absolute;
   top: 15%;
@@ -828,7 +831,8 @@ input {
       -ms-flex-pack: center;
           justify-content: center;
   padding: 5px 8px 5px 10px;
-  border-radius: 6px; }
+  border-radius: 6px;
+  cursor: pointer; }
   .appointment::after {
     content: "";
     display: block;
@@ -850,9 +854,6 @@ input {
 .appointment__zip {
   font-size: 1em;
   color: #ffffff; }
-
-.appointment_hide {
-  display: none; }
 
 .schedule-items__day-wrapper {
   position: relative;
@@ -905,13 +906,17 @@ input {
 .absence {
   position: absolute;
   height: 80%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   background-color: #FFB700;
   padding: 5px 8px 5px 10px;
   border-radius: 6px; }
-  .absence svg {
-    position: absolute;
-    top: 15px;
-    left: 10px; }
 
 .popup-window {
   width: 100vw;
@@ -1121,6 +1126,62 @@ input {
   -webkit-transform: rotate(45deg);
   -ms-transform: rotate(45deg);
   transform: rotate(45deg); }
+
+.appointment-hover {
+  position: absolute;
+  opacity: 0;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  pointer-events: none;
+  min-width: 150px;
+  z-index: 5;
+  border-radius: 6px;
+  padding: 5px 8px 5px 10px;
+  background-color: #ffffff;
+  border: 2px solid #6093DE; }
+
+.appointment-hover__job {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 2px; }
+
+.appointment-hover__job-number {
+  font-size: 1.6em; }
+
+.appointment-drop-list {
+  position: absolute;
+  padding: 15px;
+  background-color: #ffffff;
+  border-radius: 6px;
+  opacity: 0;
+  pointer-events: none;
+  z-index: 5;
+  border: 2px solid #8391AD; }
+
+.appointment-drop-list__item {
+  font-size: 1.4em;
+  margin-bottom: 8px;
+  border: 2px solid #6093DE;
+  padding: 6px;
+  border-radius: 6px;
+  cursor: pointer; }
 
 .visible {
   opacity: 1;
