--- a/schedule/css/main.css
+++ b/schedule/css/main.css
@@ -895,14 +895,6 @@ input {
     width: 4px;
     opacity: 1; }
 
-.appointment__hover-block {
-  display: none;
-  position: absolute;
-  width: auto;
-  height: 100%;
-  z-index: 5;
-  background-color: inherit; }
-
 .absence {
   position: absolute;
   height: 80%;
@@ -1151,19 +1143,16 @@ input {
   background-color: #ffffff;
   border: 2px solid #6093DE; }
 
-.appointment-hover__job {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin-bottom: 2px; }
-
 .appointment-hover__job-number {
+  margin-bottom: 4px;
   font-size: 1.6em; }
+
+.appointment-hover__job-info {
+  margin-bottom: 4px;
+  font-size: 1.4em; }
+
+.appointment-hover__zip {
+  font-size: 1.4em; }
 
 .appointment-drop-list {
   position: absolute;
@@ -1182,6 +1171,11 @@ input {
   padding: 6px;
   border-radius: 6px;
   cursor: pointer; }
+
+.btn_disabled {
+  pointer-events: none;
+  color: #D0D3DA;
+  border-color: #D0D3DA; }
 
 .visible {
   opacity: 1;
