--- a/schedule/css/main.css
+++ b/schedule/css/main.css
@@ -830,7 +830,7 @@ input {
   -webkit-justify-content: center;
       -ms-flex-pack: center;
           justify-content: center;
-  padding: 5px 8px 5px 10px;
+  padding: 5px 8px 5px 12px;
   border-radius: 6px;
   cursor: pointer; }
   .appointment::after {
@@ -838,11 +838,11 @@ input {
     display: block;
     position: absolute;
     left: 5px;
-    width: 2px;
+    width: 4px;
     border-radius: 10px;
     height: 70%;
     background-color: #ffffff;
-    opacity: 0.4; }
+    opacity: 1; }
 
 .appointment__job-number {
   margin-bottom: 2px;
@@ -853,7 +853,9 @@ input {
 
 .appointment__zip {
   font-size: 1em;
-  color: #ffffff; }
+  color: #ffffff;
+  overflow: hidden;
+  white-space: nowrap; }
 
 .schedule-items__day-wrapper {
   position: relative;
@@ -891,10 +893,10 @@ input {
   background-color: #FF0000; }
 
 .appointment_notification {
-  padding-left: 15px; }
+  padding-left: 10px; }
   .appointment_notification::after {
-    width: 4px;
-    opacity: 1; }
+    width: 2px;
+    opacity: 0.4; }
 
 .absence {
   position: absolute;
@@ -988,7 +990,7 @@ input {
   padding-right: 5px; }
 
 .drag-and-drop-confirmation-popup {
-  background-color: #ffffff;
+  position: absolute;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -1013,7 +1015,10 @@ input {
   margin: 0 10px;
   min-width: 320px;
   max-width: 420px;
-  border-radius: 6px; }
+  border-radius: 6px;
+  background-color: #ffffff;
+  opacity: 0;
+  pointer-events: none; }
 
 .drag-and-drop-confirmation__questions-wrapper {
   margin-bottom: 20px;
@@ -1048,16 +1053,14 @@ input {
   font-size: 1.2em;
   border-radius: 6px; }
 
-.drag-and-drop-confirmation-popup__deny-btn {
-  margin-right: 20px; }
-
-.drag-and-drop-confirmation-popup__confirm-btn {
-  border: 2px solid #01B41F;
-  color: #01B41F; }
-
-.drag-and-drop-confirmation-popup__deny-btn {
+.drag-and-drop-confirmation__deny-btn {
+  margin-right: 20px;
   border: 2px solid #FF0000;
   color: #FF0000; }
+
+.drag-and-drop-confirmation__confirm-btn {
+  border: 2px solid #01B41F;
+  color: #01B41F; }
 
 .drag-and-drop-confirmation__questions {
   margin-bottom: 15px; }
@@ -1157,7 +1160,7 @@ input {
 
 .appointment-drop-list {
   position: absolute;
-  padding: 15px;
+  padding: 15px 0px;
   background-color: #ffffff;
   border-radius: 6px;
   opacity: 0;
@@ -1167,13 +1170,181 @@ input {
 
 .appointment-drop-list__item {
   font-size: 1.4em;
-  margin-bottom: 8px;
-  border: 2px solid #6093DE;
-  padding: 6px;
-  border-radius: 6px;
+  border-bottom: 1px solid #D0D3DA;
+  padding: 8px;
   cursor: pointer; }
   .appointment-drop-list__item:last-child {
     margin-bottom: 0px; }
+  .appointment-drop-list__item:first-child {
+    border-top: 1px solid #D0D3DA; }
+
+.appointment-send-notification-confirmation-popup {
+  position: absolute;
+  padding: 25px;
+  border-radius: 6px;
+  background-color: #ffffff;
+  opacity: 0;
+  pointer-events: none; }
+
+.appointment-send-notification-confirmation__btns {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex; }
+
+.appointment-send-notification-confirmation__deny-btn, .appointment-send-notification-confirmation__confirm-btn {
+  border-radius: 6px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-flex-basis: 50%;
+      -ms-flex-preferred-size: 50%;
+          flex-basis: 50%;
+  padding: 8px 25px;
+  font-size: 1.8em;
+  border-radius: 6px;
+  cursor: pointer; }
+
+.appointment-send-notification-confirmation__deny-btn {
+  margin-right: 20px;
+  border: 2px solid #FF0000;
+  color: #FF0000; }
+
+.appointment-send-notification-confirmation__confirm-btn {
+  border: 2px solid #01B41F;
+  color: #01B41F; }
+
+.appointment-reschedule-confirmation__header {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
+  margin-bottom: 20px; }
+
+.appointment-reschedule-confirmation__job-number {
+  font-size: 2em;
+  -webkit-align-self: center;
+      -ms-flex-item-align: center;
+          align-self: center;
+  margin-bottom: 15px; }
+
+.appointment-reschedule-confirmation__appointment-info-text {
+  font-size: 1.6em;
+  margin-bottom: 5px; }
+
+.appointment-reschedule-confirmation__appointment-info-item {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 5px;
+  font-size: 1.6em;
+  white-space: nowrap;
+  overflow: hidden; }
+  .appointment-reschedule-confirmation__appointment-info-item span {
+    padding-right: 8px;
+    color: #8391AD; }
+
+.appointment-reschedule-confirmation__date-new {
+  padding-right: 5px; }
+
+.appointment-reschedule-confirmation-popup {
+  position: absolute;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+  padding: 25px;
+  margin: 0 10px;
+  min-width: 320px;
+  max-width: 420px;
+  border-radius: 6px;
+  background-color: #ffffff;
+  opacity: 0;
+  pointer-events: none; }
+
+.appointment-reschedule-confirmation__questions-wrapper {
+  margin-bottom: 20px;
+  -webkit-align-self: flex-start;
+      -ms-flex-item-align: start;
+          align-self: flex-start; }
+
+.appointment-reschedule-confirmation__btns {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex; }
+
+.appointment-reschedule-confirmation__deny-btn {
+  border-radius: 6px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-flex-basis: 40%;
+      -ms-flex-preferred-size: 40%;
+          flex-basis: 40%;
+  padding: 8px 25px;
+  font-size: 1.2em;
+  border-radius: 6px; }
+
+.appointment-reschedule-confirmation__deny-btn {
+  margin-right: 20px;
+  border: 2px solid #FF0000;
+  color: #FF0000; }
+
+.appointment-reschedule-confirmation__confirm-btn {
+  border: 2px solid #01B41F;
+  color: #01B41F; }
+
+.appointment-reschedule-confirmation__questions {
+  margin-bottom: 15px; }
+
+.appointment-reschedule-confirmation__questions-item {
+  margin-bottom: 5px; }
 
 .btn_disabled {
   pointer-events: none;
